卡在 public api 无备案

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
 
     .selectButton{
-        width: 150x;
+        width: 150px;
         display: flex;
+        margin-top: 50px;
     }
 }
