--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,9 +1,7 @@
 .home {
-    display: flex;
-    flex-direction: column;
 
-    .selectButton{
-        width: 150x;
-        display: flex;
+    .selectButton {
+        width: 150px;
+        margin: 100px
     }
 }
